--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^4.0.1"
   },
   "ampt": {
-    "app": "ampt-api"
+    "app": "ampt-api",
+    "org": "clubwomanizer588499916"
   }
 }
